# reproduce

./: .gitignore  LICENSE  README.md  pyproject.toml
us-border/: readme.md
us-border/notebooks/: pew-repro.ipynb
us-border/notebooks/.ipynb_checkpoints/: pew-repro-checkpoint.ipynb
us-border/queries/: nationwide_apprehensions_yearly_update.sql
us-border/schemas/: cbp_apprehensions_monthly.sql  nationwide_apprehensions_yearly.sql  nationwide_encounters_aor.sql  nationwide_encounters_state.sql  sbo_encounters.sql
us-border/scripts/: add_csv_to_table.py  args.py  cbp_apprehensions_monthly.py  nationwide_apprehensions_yearly.py  util.py
